# biome

./: Cargo.toml  justfile  knope.toml  pnpm-lock.yaml
.changeset/: optional-options-obliterate.md
crates/biome_analyze/src/: analyzer_plugin.rs  registry.rs  rule.rs
crates/biome_cli/src/: lib.rs
crates/biome_cli/tests/: main.rs
crates/biome_dependency_graph/src/: dependency_graph.rs  dependency_graph.tests.rs  module_visitor.rs
crates/biome_deserialize/: Cargo.toml
crates/biome_deserialize/src/: json.rs
crates/biome_deserialize_macros/src/: lib.rs
crates/biome_diagnostics/examples/: lint.rs
crates/biome_diagnostics_categories/src/: categories.rs
crates/biome_fs/src/: fs.rs  lib.rs
crates/biome_grit_patterns/src/: grit_binding.rs  grit_built_in_functions.rs  grit_node_patterns.rs  grit_query.rs  grit_target_language.rs
crates/biome_grit_patterns/tests/: quick_test.rs
crates/biome_js_analyze/: Cargo.toml
crates/biome_js_analyze/src/: lib.rs  options.rs  react.rs
crates/biome_js_analyze/tests/: spec_tests.rs
crates/biome_js_dependency_graph/: Cargo.toml
crates/biome_js_dependency_graph/src/: builder.rs  events.rs  lib.rs  model.rs
crates/biome_js_formatter/src/: generated.rs
crates/biome_js_syntax/: Cargo.toml
crates/biome_js_syntax/src/: import_ext.rs  unescape.rs
crates/biome_js_type_info/: Cargo.toml
crates/biome_json_value/: Cargo.toml
crates/biome_module_graph/: Cargo.toml
crates/biome_rowan/: Cargo.toml
crates/biome_service/: Cargo.toml
crates/biome_wasm/: Cargo.toml
xtask/codegen/: Cargo.toml  js.ungram
(+236 files in other folders)
