
[package]
authors.workspace    = true
categories.workspace = true
description          = "Graph spanning all the project's JS/TS files and their dependencies"
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
name                 = "biome_js_dependency_graph"
repository.workspace = true
version              = "0.0.0"

[lints]
workspace = true

[dependencies]
biome_js_syntax = { workspace = true }
